force-app/main/default/objects/Terms_of_Business__c/Terms_of_Business__c.object-meta.xml
<CustomObject>
    <label>Terms of Business</label>
    <nameField>
        <displayFormat>TOB-{0000}</displayFormat>
        <label>Terms of Business Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terms of Business</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>