force-app/main/default/objects/Terms_of_Business__c/fields/Date_terms_of_business_accepted__c.field-meta.xml
<CustomField>
    <fullName>Date_terms_of_business_accepted__c</fullName>
    <description>A date field relating to the date terms of business was accepted.</description>
    <label>Date terms of business accepted</label>
    <type>DateTime</type>
</CustomField>