force-app/main/default/objects/Terms_of_Business__c/fields/Date_terms_of_business_sent__c.field-meta.xml
<CustomField>
    <fullName>Date_terms_of_business_sent__c</fullName>
    <label>Date terms of business sent</label>
    <type>DateTime</type>
</CustomField>