force-app/main/default/objects/Terms_of_Business__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A lookup to the household related to this terms of business.</description>
    <label>Household</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The account selected in the household field must be a household. 

(Admin message: lookup filter criteria not met on Household on the Terms of Business object)</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>IndustriesHousehold</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Terms of Business</relationshipLabel>
    <relationshipName>Terms_of_Business_h</relationshipName>
    <type>Lookup</type>
</CustomField>