force-app/main/default/objects/Terms_of_Business__c/fields/IP_address__c.field-meta.xml
<CustomField>
    <fullName>IP_address__c</fullName>
    <description>A textbox for the IP address.</description>
    <label>IP address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>