force-app/main/default/objects/Terms_of_Business__c/fields/OW_date_matches_account__c.field-meta.xml
<CustomField>
    <fullName>OW_date_matches_account__c</fullName>
    <description>Temporary field used to assess data quality issues with the date on the terms of business matching the date on the account when TOB were signed.</description>
    <formula>Person_Account__r.Date_terms_of_business_last_accepted__c =   DATEVALUE( Date_terms_of_business_accepted__c )</formula>
    <label>Date matches account</label>
    <type>Checkbox</type>
</CustomField>