force-app/main/default/objects/Terms_of_Business__c/fields/OW_invalid_signature_reason__c.field-meta.xml
<CustomField>
    <fullName>OW_invalid_signature_reason__c</fullName>
    <description>Where terms of business were accepted but without proper signature, it&#39;s possible to record why a signature was invalid.</description>
    <label>Invalid signature reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No signature</fullName>
            </value>
            <value>
                <fullName>Did not match other records</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>