force-app/main/default/objects/Terms_of_Business__c/fields/Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Person_Account__c</fullName>
    <label>Person account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Terms of Business</relationshipLabel>
    <relationshipName>Terms_of_Business</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>