force-app/main/default/objects/Terms_of_Business__c/fields/Signature_Image__c.field-meta.xml
<CustomField>
    <fullName>Signature_Image__c</fullName>
    <description>This is the base64 encoded png image of the client&apos;s signature</description>
    <label>Signature image</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>