force-app/main/default/objects/Terms_of_Business__c/fields/Signature_Path__c.field-meta.xml
<CustomField>
    <fullName>Signature_Path__c</fullName>
    <description>This is the JSON stringified path of the client&apos;s signature</description>
    <label>Signature path</label>
    <length>60000</length>
    <type>LongTextArea</type>
</CustomField>