force-app/main/default/objects/Terms_of_Business__c/fields/terms_external_id__c.field-meta.xml
<CustomField>
    <fullName>terms_external_id__c</fullName>
    <description>An external ID for terms of business.</description>
    <externalId>true</externalId>
    <label>Terms external ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>