force-app/main/default/objects/Terms_of_Business__c/fields/User_Agent__c.field-meta.xml
<CustomField>
    <fullName>User_Agent__c</fullName>
    <description>User Agent of the client that accepted the terms e.g browser data</description>
    <label>User Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>