force-app/main/default/objects/Terms_of_Business__c/fields/Version_of_terms_accepted__c.field-meta.xml
<CustomField>
    <fullName>Version_of_terms_accepted__c</fullName>
    <description>Detail which version of terms were accepted.</description>
    <label>Version of terms accepted</label>
    <length>100</length>
    <type>Text</type>
</CustomField>