force-app/main/default/objects/Terms_of_Business__c/validationRules/OW_prevent_tob_reparenting.validationRule-meta.xml
<ValidationRule>
    <fullName>OW_prevent_tob_reparenting</fullName>
    <active>true</active>
    <description>Prevents TOB being edited to assign the record to a different person or household.</description>
    <errorConditionFormula>NOT( ISNEW() )

&amp;&amp;

( ISCHANGED( Household__c ) || ISCHANGED( Person_Account__c ) )</errorConditionFormula>
    <errorMessage>You cannot change the person or household to which these TOB are linked.</errorMessage>
</ValidationRule>