force-app/main/default/objects/Terms_of_Business__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Person_Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Date_terms_of_business_sent__c</columns>
    <columns>Date_terms_of_business_accepted__c</columns>
    <columns>Version_of_terms_accepted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>